# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
.claude/: settings.local.json
.claude/skills/cerebras/: SKILL.md
.claude/skills/smartstart/: SKILL.md
backend/: pyproject.toml
backend/app/: auth.py  catalog.py  chat.py  db.py  documents.py  main.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_db.py  test_documents.py  test_health.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/documents/: page.tsx
frontend/app/documents/[id]/: page.tsx
frontend/components/: AppShell.tsx  AuthContext.tsx  AuthGate.tsx  ChatPanel.tsx  LoginScreen.tsx  NdaDocument.tsx  NdaForm.tsx
frontend/lib/: actions.ts  api.ts  auth.ts  catalog.ts  chat.ts  documents.ts  genericTemplate.ts  ndaTemplate.ts  types.ts
scripts/: docker-entrypoint.sh  start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: AI-Addendum.md  BAA.md  DPA.md  LICENSE.txt  Partnership-Agreement.md  Pilot-Agreement.md  Software-License-Agreement.md  design-partner-agreement.md  psa.md  sla.md
